# deepdivde_course

./: .dockerignore  .gitignore  CLAUDE.md  README.md  SSL.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  uwsgi.ini
.github/workflows/: build.yml
compose/prod/: Dockerfile  docker-entrypoint.sh
deepdive_course/: asgi.py  settings.py  urls.py  wsgi.py
devops/: docker-compose.yml  nginx.conf  redeploy.sh
devops/scripts/: deploy.sh
devops/terraform/: main.tf  outputs.tf  user_data.sh  variables.tf
locale/pl/LC_MESSAGES/: django.mo  django.po
marketing/: admin.py  forms.py  models.py  service.py  urls.py  views.py
marketing/migrations/: 0001_initial.py  0002_lead_accept_language_lead_city_lead_country_and_more.py  0003_alter_lead_email.py
marketing/static/marketing/css/: bootstrap.min.css  landingpage.css
marketing/static/marketing/js/: landingpage.js
marketing/templates/marketing/: landingpage.html
static/marketing/css/: landingpage.css
static/marketing/js/: landingpage.js
