[project]
name = "deepdivde-course"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.5,<7.0.0)",
    "uwsgi (>=2.0.31,<3.0.0)",
    "django-crispy-forms (>=2.6,<3.0)",
    "crispy-bootstrap4 (>=2026.2,<2027.0)",
    "psycopg2-binary (>=2.9,<3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
